tools/hermes/tests/fixtures/json_nested_children/expected.stderr
  × parent error
   ╭─[[PROJECT_ROOT]/src/lib.rs:1:1]
 1 │ pub fn foo() {}
   · ─────┬────
   ·      ╰── oops
 2 │ 
   ╰────
  help: help me

Error: Diagnostic error in charon
